# AutoOs

./: .env.example  .gitignore  1-SETUP.md  2-PRODUCTION.md  3-NEXT_STEPS.md  4-BACKUP.md  5-LAN-SERVER-SETUP.md  AGENTS.md  MIGRACAO_POSTGRESQL.md  NEXT_STEPS.md  OPERATIONAL_RECOVERY.md  POSTGRES_BACKUP_RESTORE.md  POSTGRES_SETUP.md  README.md  SECURITY_SENSITIVE_COMMAND_MATRIX.md  TEST_RISK_MATRIX.md  WINDOWS_OPERATION_READINESS.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: reality-checker.agent.md  senior-developer.agent.md  software-architect.agent.md
.github/workflows/: build.yml  ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/final-qa/: qa-report.txt  qa-results.txt  run-qa.mjs  screenshot.mjs
.sisyphus/notepads/error-handling-ux/: learnings.md
.sisyphus/notepads/error-modal-cohesion/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/servicos-alert-migration/: learnings.md
.sisyphus/notepads/ui-components-tests/: learnings.md
.sisyphus/plans/: error-modal-cohesion.md  gastos-fotos.md
.sisyphus/run-continuation/: ses_17c465824ffe29DglH3AhZofah.json  ses_17c51047affeG6i1B20L6Swnvs.json  ses_17c6496d4ffeECP2xvZCioUDjn.json  ses_19ed7a7a2ffeuBYSfM4bMvxSZE.json  ses_206a27a8bffejcrUWa96yXE7sS.json
docs/: ATUALIZACAO_EXE.md  BACKLOG_POS_GO_LIVE.md  PRD_AutoOS.md  PROPOSTAS_AUTOOS.md  RELEASE.md  TESTES_INTEGRACAO.md  VERSIONING.md  WINDOWS_CODE_SIGNING.md
docs/_archive/: 3-NEXT_STEPS_AUTOBO.md
scripts/: apply-windows-bundle-signing.mjs  generate-update-manifest.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_schema_hardening.sql  0003_equipment_intake_fields.sql  0004_equipment_images.sql  0005_service_catalog.sql  0006_gastos.sql  0007_verificacao_imagens.sql  0008_multiplas_manutencoes.sql  0009_idempotencia_final.sql  0010_melhorias_autoos.sql  0011_telefone_opcional.sql
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: AGENTS.md  auth.rs  clientes.rs  comunicacoes.rs  equipamento_imagens.rs  equipamentos.rs  gastos.rs  mod.rs  photo_server.rs  produtos.rs  qr_code.rs  servicos.rs  smtp.rs  types.rs  util.rs  verificacoes.rs  whatsapp.rs
src/components/: BootSplash.tsx  DatabaseConfigDialog.tsx  ErrorBoundary.tsx  Layout.tsx  PasswordRecoveryDialog.tsx  ProfileDeleteDialog.tsx  ProfileSessionDialog.tsx  UpdateChecker.tsx
src/components/ui/: button.test.tsx  (+6 more)
src/hooks/: useClientes.ts  useEquipamentos.test.tsx  useEquipamentos.ts  useGastos.ts  useInsumos.ts  useNotification.ts  useSensitiveAccess.tsx  useServicos.ts  useStatusEquipamento.test.tsx  useStatusEquipamento.ts
src/lib/: AGENTS.md  db-config.ts  db.equipamentos.test.ts  db.ts  email-service.test.ts  email-service.ts  equipamento-imagem-utils.ts  error-utils.ts  logo-base64.ts  pdf-service.test.ts  pdf-service.ts  sensitive-access.ts  smtp-config.ts  utils.test.ts  utils.ts  validations.ts  whatsapp-config.ts  whatsapp-service.test.ts  whatsapp-service.ts
src/pages/: AGENTS.md  Clientes.tsx  Configuracoes.tsx  Dashboard.tsx  Equipamentos.tsx  Gastos.tsx  Insumos.tsx  Perfil.tsx  Servicos.tsx
src/types/: index.ts  notification.ts
(+52 files in other folders)
