[package]
name = "autoos"
version = "0.2.1"
description = "Sistema de Gestão de Impressoras e Estoque de Insumos"
authors = ["BMITAG"]
edition = "2021"
default-run = "autoos"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[bin]]
name = "runtime_smoke"
path = "src/bin/runtime_smoke.rs"

[[bin]]
name = "p1_concurrency_integration"
path = "src/bin/p1_concurrency_integration.rs"

[[bin]]
name = "p1_windows_support_check"
path = "src/bin/p1_windows_support_check.rs"

[[bin]]
name = "p1_critical_integration"
path = "src/bin/p1_critical_integration.rs"

[[bin]]
name = "p1_communication_integration"
path = "src/bin/p1_communication_integration.rs"

[[bin]]
name = "test_auth_inactivity"
path = "src/bin/test_auth_inactivity.rs"

[[bin]]
name = "test_auth_optional_pin"
path = "src/bin/test_auth_optional_pin.rs"

[[bin]]
name = "test_recovery"
path = "src/bin/test_recovery.rs"

[[bin]]
name = "test_budget_service_mgmt"
path = "src/bin/test_budget_service_mgmt.rs"

[[bin]]
name = "test_auth_integration"
path = "src/bin/test_auth_integration.rs"

[dependencies]
tauri = { version = "2.11.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "tokio1-native-tls", "smtp-transport"] }
keyring = "2"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-appender = "0.2.5"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
qrcode = "0.14"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
